[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-source-estimator"
version = "0.1.0"
description = "A tool for sound source estimation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "wattai", email = "evamark.wattai@gmail.com" }
]
dependencies = [
    "numpy~=2.1.2",
    "scipy~=1.14.1",
    "soundfile~=0.12.1",
    "matplotlib~=3.9.2",
    "pydantic~=2.9.2",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.7.1",
    "pre-commit~=3.5.0",
    "pytest~=8.3.3",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
